--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=gri-service
+server.port=8092
 
 # Config Server
 spring.cloud.config.uri=http://localhost:8888
 spring.config.import=optional:configserver:
-
-# Eureka Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=127.0.0.1
 
